Layout initial completed.

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -7,7 +7,7 @@
 		  <meta charset="utf-8">
           <meta content='initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width' name=viewport>
 
-		  <title>Michael Silva - Full-stack developer, UI/UX designer</title>
+		  <title>Michael Silva - Full-Stack developer, UI/UX designer</title>
           <link rel="icon" type="image/png" href="dist/images/favicon.png">
 
           <link rel="stylesheet" href="dist/css/styles.css">
@@ -462,13 +462,173 @@
 
             <!-- #PROJECTS -->
 
-            <hr class="hr-skills">
+            <hr class="hr-projects">
+
+            <section class="section-model-3">
+                <header>
+                    <h2>Latest Projects</h2>
+                    <h3>See some of my works, any questions, please contact me <3</h3>
+                </header>
+
+                <div class="container">
+
+                    <ul class="gallery">
+                        <li>
+                            <div class="item">
+                                <img src="dist/images/test-project.jpg">
+                                <p class="title">
+                                    Food mobile App
+                                </p>
+                                <p class="text">
+                                    Online headquarters for the local Code for America brigade in Rhode Island.
+                                </p>
+
+                                <i class="fa fa-bars open-project"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <img src="dist/images/test-project.jpg">
+                                <p class="title">
+                                    Food mobile App
+                                </p>
+                                <p class="text">
+                                    Online headquarters for the local Code for America brigade in Rhode Island.
+                                </p>
+
+                                <i class="fa fa-bars open-project"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <img src="dist/images/test-project.jpg">
+                                <p class="title">
+                                    Food mobile App
+                                </p>
+                                <p class="text">
+                                    Online headquarters for the local Code for America brigade in Rhode Island.
+                                </p>
+
+                                <i class="fa fa-bars open-project"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <img src="dist/images/test-project.jpg">
+                                <p class="title">
+                                    Food mobile App
+                                </p>
+                                <p class="text">
+                                    Online headquarters for the local Code for America brigade in Rhode Island.
+                                </p>
+
+                                <i class="fa fa-bars open-project"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <img src="dist/images/test-project.jpg">
+                                <p class="title">
+                                    Food mobile App
+                                </p>
+                                <p class="text">
+                                    Online headquarters for the local Code for America brigade in Rhode Island.
+                                </p>
+
+                                <i class="fa fa-bars open-project"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <img src="dist/images/test-project.jpg">
+                                <p class="title">
+                                    Food mobile App
+                                </p>
+                                <p class="text">
+                                    Online headquarters for the local Code for America brigade in Rhode Island.
+                                </p>
+
+                                <i class="fa fa-bars open-project"></i>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+
+            <!-- #CONTACT -->
+
+            <hr class="hr-contact">
+
+            <section class="section-model-4">
+
+                <header>
+                    <h2>Contact</h2>
+                </header>
+
+                <div class="container">
+
+                    <div class="certificates">
+
+                        <ul>
+                            <li>
+                                <div class="frame-radius">
+                                    <img src="dist/images/ms-cert-sample.png">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="frame-radius">
+                                    <img src="dist/images/ms-cert-sample.png">
+                                </div>                            </li>
+                            <li>
+                                <div class="frame-radius">
+                                    <img src="dist/images/ms-cert-sample.png">
+                                </div>
+                            </li>
+
+                        </ul>
+
+                    </div>
+
+                    <p class="text-contact">
+                        This open source project is in Github.
+                        <br>
+                        Designed and coded with lots of <img src="dist/images/love.png"> by myself.
+                    </p>
+
+                </div>
+
+            </section>
 
 
         </main>
 
 
-        <footer class="footer-main"></footer>
+        <footer class="footer-main">
+
+            <div class="social-medias">
+
+                <!--<img src="dist/images/github-icon.png">
+                <img src="dist/images/facebook-icon.png">
+                <img src="dist/images/twitter-icon.png">
+                <img src="dist/images/youtube-icon.png">
+                <img src="dist/images/linkedin-icon.png">
+                <img src="dist/images/behance-icon.png">-->
+
+                <i class="fa fa-github-square"></i>
+                <i class="fa fa-facebook-square"></i>
+                <i class="fa fa-twitter-square"></i>
+                <i class="fa fa-youtube-square"></i>
+                <i class="fa fa-linkedin-square"></i>
+                <i class="fa fa-behance-square"></i>
+
+            </div>
+
+            <div class="text-final">
+                michael@michaelsilva.io
+            </div>
+
+        </footer>
 
 	    <script src="dist/scripts/scripts.js"></script>
 
