-Add jquery gallery to projects

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -399,7 +399,13 @@
         <ul class="gallery">
             <li class="hvr-hang project-item">
                 <div class="item">
-                    <img src="dist/images/test-project.jpg" alt="Project Description">
+
+                    <span class="lightgallery">
+                        <a href="dist/images/test-project.jpg" class="cover">
+                            <img src="dist/images/test-project.jpg" alt="Project Description">
+                        </a>
+                    </span>
+
                     <p class="title">
                         Food mobile App
                     </p>
@@ -448,7 +454,13 @@
 
             <li class="hvr-hang project-item">
                 <div class="item">
-                    <img src="dist/images/test-project.jpg" alt="Project Description">
+
+                    <span class="lightgallery">
+                        <a href="dist/images/test-project.jpg" class="cover">
+                            <img src="dist/images/test-project.jpg" alt="Project Description">
+                        </a>
+                    </span>
+
                     <p class="title">
                         Food mobile App
                     </p>
@@ -498,7 +510,13 @@
             </li>
             <li class="hvr-hang project-item">
                 <div class="item">
-                    <img src="dist/images/test-project.jpg" alt="Project Description">
+
+                    <span class="lightgallery">
+                        <a href="dist/images/test-project.jpg" class="cover">
+                            <img src="dist/images/test-project.jpg" alt="Project Description">
+                        </a>
+                    </span>
+
                     <p class="title">
                         Food mobile App
                     </p>
@@ -548,7 +566,13 @@
             </li>
             <li class="hvr-bob project-item">
                 <div class="item">
-                    <img src="dist/images/test-project.jpg" alt="Project Description">
+
+                    <span class="lightgallery">
+                        <a href="dist/images/test-project.jpg" class="cover">
+                            <img src="dist/images/test-project.jpg" alt="Project Description">
+                        </a>
+                    </span>
+
                     <p class="title">
                         Food mobile App
                     </p>
@@ -598,7 +622,13 @@
             </li>
             <li class="hvr-bob project-item">
                 <div class="item">
-                    <img src="dist/images/test-project.jpg" alt="Project Description">
+
+                    <span class="lightgallery">
+                        <a href="dist/images/test-project.jpg" class="cover">
+                            <img src="dist/images/test-project.jpg" alt="Project Description">
+                        </a>
+                    </span>
+
                     <p class="title">
                         Food mobile App
                     </p>
@@ -648,7 +678,13 @@
             </li>
             <li class="hvr-bob project-item">
                 <div class="item">
-                    <img src="dist/images/test-project.jpg" alt="Project Description">
+
+                    <span class="lightgallery">
+                        <a href="dist/images/test-project.jpg" class="cover">
+                            <img src="dist/images/test-project.jpg" alt="Project Description">
+                        </a>
+                    </span>
+                    
                     <p class="title">
                         Food mobile App
                     </p>
